# infiniteExplorer

./: .gitmodules  BitmapViewer.cpp  BitmapViewer.h  BspViewer.cpp  BspViewer.h  CMakeLists.txt  ClosableTab.cpp  ClosableTab.h  ContentTableViewer.cpp  ContentTableViewer.h  DataTableViewer.cpp  DataTableViewer.h  FileEntry.h  FileList.cpp  FileList.h  FileViewerManager.cpp  FileViewerManager.h  FuseDialog.cpp  FuseDialog.h  FuseProvider.cpp  FuseProvider.h  InfiniteFileViewer.cpp  InfiniteFileViewer.h  LogManager.cpp  LogManager.h  LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  ManagedLogger.cpp  ManagedLogger.h  MeshViewer.cpp  MeshViewer.h  ModuleDisplayManager.cpp  ModuleDisplayManager.h  ModuleManager.cpp  ModuleManager.h  ModuleNode.h  OptionalViewer.h  PmdfViewer.cpp  (+21 more)
.github/workflows/: cmake.yml
3D/: AssImpExporter.cpp  AssImpExporter.h  AssimpHandle.h  CMakeLists.txt  ExporterBase.cpp  ExporterBase.h
3D/interface/: CMakeLists.txt  GLBufferHandle.cpp  GLBufferHandle.h  IEViewer.cpp  IEViewer.h  InfGLModelRenderer.cpp  InfGLModelRenderer.h  InfMesh.cpp  InfMesh.h  InfMeshResource.cpp  InfMeshResource.h  ManagedGLBufferHandle.cpp  ManagedGLBufferHandle.h  VAOHandle.cpp  VAOHandle.h
blendermat/: matsetup.py
cli/: CMakeLists.txt  main.cpp  main.h
res/: CMakeLists.txt  Entry.css  bitmapViewer.glade  bsp.glade  fileExplorer.css  frg.glsl  main.xml  matDialog.glade  meshes.glade  vtx.glsl
